@@ -1,13 +1,7 @@
 package com.viewnext.gestiontareas.controller;
 
-
-
 import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -15,14 +9,9 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-
 import com.viewnext.gestiontareas.controller.dto.TareaDTO;
-import com.viewnext.gestiontareas.persistence.model.Tarea;
 import com.viewnext.gestiontareas.service.TareaService;
-import com.viewnext.gestiontareas.service.bo.TareaBO;
-
 import jakarta.servlet.http.HttpServletRequest;
 
 /**
@@ -32,18 +21,23 @@ import jakarta.servlet.http.HttpServletRequest;
  *
  */
 
+
 @RestController
 @RequestMapping("/api/tareas")
 public class TareaController {
 	
-	@Autowired
+	
 	private TareaService tareaService;
-	
-	@Autowired
+		
 	private BoToDto boToDto;
-	
-	@Autowired
+		
 	private DtoToBo dtoToBo;
+	
+	public TareaController(TareaService tareaService, BoToDto boToDto, DtoToBo dtoToBo) {
+		this.tareaService=tareaService;
+		this.boToDto=boToDto;
+		this.dtoToBo=dtoToBo;
+	}
 	
 	
 	@PostMapping("/nueva")
@@ -53,26 +47,15 @@ public class TareaController {
 		return ResponseEntity.ok(tarea);
 	}
 	
-	/**
-	 * Metodo que devuelve una lista con todos las tareas
-	 * @return
-	 */
-	
-	@GetMapping("/all")	
+	@GetMapping("/all")		
 	public List<TareaDTO> getAll(){
 	
 
-		return tareaService.finAll().stream()
-		        .map(boToDto::tareaBoToDto)
-		        .collect(Collectors.toList());
+		return tareaService.findAll().stream()
+		        .map(boToDto::tareaBoToDto).toList();
 
 	}
 	
-	/**
-	 * Metodo para buscar tarea por id
-	 * @param id
-	 * @return
-	 */
 	
 	@GetMapping("/id/{id}")	
 	public TareaDTO getById(@PathVariable("id") int id){		
@@ -83,12 +66,16 @@ public class TareaController {
 	
 	@DeleteMapping("/eliminar/{id}")
 	public void deleteTarea(@PathVariable int id) {
+		
 		tareaService.deleteTarea(id);
 	}
+
 	
-	@PutMapping("/update/{id}")
-	public TareaDTO updateById(@RequestBody TareaDTO tareaDTO) {
-		return boToDto.tareaBoToDto(tareaService.update(dtoToBo.tareaDtoToBo(tareaDTO)));
-	}
+	@PutMapping("/update")
+    public TareaDTO updateById(@RequestBody TareaDTO tareaDTO) {
+				
+        return boToDto.tareaBoToDto(tareaService.update(dtoToBo.tareaDtoToBo(tareaDTO)));
+    }
+
 	
 }
